--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1>Web Inicial</h1>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1>Web Inicial</h1>
+
+    <p>Aquest examen és molt fàcil </p>
+
+</body>
+
+</html>
